@@ -3,8 +3,7 @@ from selvbetjening.sadmin.base import sadmin
 
 def site_urls(request):
     from django.conf import settings
-    return {'MEDIA_URL': settings.MEDIA_URL,
-            'SITE_URL': settings.SITE_URL,
+    return {'SITE_URL': settings.SITE_URL,
             'DEBUG': settings.DEBUG,
             'VERSION': settings.VERSION,
             'session_message': messaging.read(request),
