@@ -7,17 +7,17 @@ from django.conf import settings
 def iso_flag(iso, flag_path=u''):
 	"""
 	Returns a full path to the ISO 3166-1 alpha-2 country code flag image.
-	
+
 	``flag_path`` is given in the form
 	``'<path relative to media root>/%s.gif'``
-	and is appended to ``settings.MEDIA_URL`` 
-	
-	if a valid flag_path is not given trys to use 
+	and is appended to ``settings.STATIC_URL``
+
+	if a valid flag_path is not given trys to use
 	``settings.COUNTRIES_FLAG_PATH``
 	defaults to ``'flags/%s.gif'``
-	
+
 	"""
-	if not settings.MEDIA_URL:
+	if not settings.STATIC_URL:
 		return u''
 	deafult = u'-'
 	if not iso:
@@ -32,4 +32,4 @@ def iso_flag(iso, flag_path=u''):
 			flag_name = flag_path % iso
 		except (ValueError, TypeError):
 			return u''
-	return u''.join((settings.MEDIA_URL, flag_name))
+	return u''.join((settings.STATIC_URL, flag_name))
