@@ -1,3 +1,3 @@
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/uni-form.css" media="screen, projection" />
-<script src="{{ MEDIA_URL }}js/jquery.min.1.4.2.js" type="text/javascript"></script>
-<script src="{{ MEDIA_URL }}js/uni-form.jquery.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/uni-form.css" media="screen, projection" />
+<script src="{{ STATIC_URL }}js/jquery.min.1.4.2.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/uni-form.jquery.js" type="text/javascript"></script>
